antlr4-runtime/SinkedSeaParser.cpp

// Generated from SinkedSea.g4 by ANTLR 4.8


#include "SinkedSeaListener.h"
#include "SinkedSeaVisitor.h"

#include "SinkedSeaParser.h"


using namespace antlrcpp;
using namespace antlr4;

SinkedSeaParser::SinkedSeaParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SinkedSeaParser::~SinkedSeaParser() {
  delete _interpreter;
}

std::string SinkedSeaParser::getGrammarFileName() const {
  return "SinkedSea.g4";
}

const std::vector<std::string>& SinkedSeaParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SinkedSeaParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ParametersContext ------------------------------------------------------------------

SinkedSeaParser::ParametersContext::ParametersContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SinkedSeaParser::ParametersContext::NAME() {
  return getTokens(SinkedSeaParser::NAME);
}

tree::TerminalNode* SinkedSeaParser::ParametersContext::NAME(size_t i) {
  return getToken(SinkedSeaParser::NAME, i);
}


size_t SinkedSeaParser::ParametersContext::getRuleIndex() const {
  return SinkedSeaParser::RuleParameters;
}

void SinkedSeaParser::ParametersContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SinkedSeaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameters(this);
}

void SinkedSeaParser::ParametersContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SinkedSeaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameters(this);
}


antlrcpp::Any SinkedSeaParser::ParametersContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SinkedSeaVisitor*>(visitor))
    return parserVisitor->visitParameters(this);
  else
    return visitor->visitChildren(this);
}

SinkedSeaParser::ParametersContext* SinkedSeaParser::parameters() {
  ParametersContext *_localctx = _tracker.createInstance<ParametersContext>(_ctx, getState());
  enterRule(_localctx, 0, SinkedSeaParser::RuleParameters);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(49);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SinkedSeaParser::NAME: {
        enterOuterAlt(_localctx, 1);
        setState(40);
        match(SinkedSeaParser::NAME);
        setState(45);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == SinkedSeaParser::T__0) {
          setState(41);
          match(SinkedSeaParser::T__0);
          setState(42);
          match(SinkedSeaParser::NAME);
          setState(47);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

      case SinkedSeaParser::T__2: {
        enterOuterAlt(_localctx, 2);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArgumentsContext ------------------------------------------------------------------

SinkedSeaParser::ArgumentsContext::ArgumentsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SinkedSeaParser::ExpressionContext *> SinkedSeaParser::ArgumentsContext::expression() {
  return getRuleContexts<SinkedSeaParser::ExpressionContext>();
}

SinkedSeaParser::ExpressionContext* SinkedSeaParser::ArgumentsContext::expression(size_t i) {
  return getRuleContext<SinkedSeaParser::ExpressionContext>(i);
}


size_t SinkedSeaParser::ArgumentsContext::getRuleIndex() const {
  return SinkedSeaParser::RuleArguments;
}

void SinkedSeaParser::ArgumentsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SinkedSeaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArguments(this);
}

void SinkedSeaParser::ArgumentsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SinkedSeaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArguments(this);
}


antlrcpp::Any SinkedSeaParser::ArgumentsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SinkedSeaVisitor*>(visitor))
    return parserVisitor->visitArguments(this);
  else
    return visitor->visitChildren(this);
}

SinkedSeaParser::ArgumentsContext* SinkedSeaParser::arguments() {
  ArgumentsContext *_localctx = _tracker.createInstance<ArgumentsContext>(_ctx, getState());
  enterRule(_localctx, 2, SinkedSeaParser::RuleArguments);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(60);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SinkedSeaParser::T__3:
      case SinkedSeaParser::T__5:
      case SinkedSeaParser::BOOL:
      case SinkedSeaParser::NAME:
      case SinkedSeaParser::INT: {
        enterOuterAlt(_localctx, 1);
        setState(51);
        expression(0);
        setState(56);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == SinkedSeaParser::T__0) {
          setState(52);
          match(SinkedSeaParser::T__0);
          setState(53);
          expression(0);
          setState(58);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        break;
      }

      case SinkedSeaParser::T__2: {
        enterOuterAlt(_localctx, 2);

        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

SinkedSeaParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SinkedSeaParser::ExpressionContext::BOOL() {
  return getToken(SinkedSeaParser::BOOL, 0);
}

tree::TerminalNode* SinkedSeaParser::ExpressionContext::INT() {
  return getToken(SinkedSeaParser::INT, 0);
}

tree::TerminalNode* SinkedSeaParser::ExpressionContext::NAME() {
  return getToken(SinkedSeaParser::NAME, 0);
}

SinkedSeaParser::ArgumentsContext* SinkedSeaParser::ExpressionContext::arguments() {
  return getRuleContext<SinkedSeaParser::ArgumentsContext>(0);
}

SinkedSeaParser::NewChanContext* SinkedSeaParser::ExpressionContext::newChan() {
  return getRuleContext<SinkedSeaParser::NewChanContext>(0);
}

SinkedSeaParser::ChanReadContext* SinkedSeaParser::ExpressionContext::chanRead() {
  return getRuleContext<SinkedSeaParser::ChanReadContext>(0);
}

std::vector<SinkedSeaParser::ExpressionContext *> SinkedSeaParser::ExpressionContext::expression() {
  return getRuleContexts<SinkedSeaParser::ExpressionContext>();
}

SinkedSeaParser::ExpressionContext* SinkedSeaParser::ExpressionContext::expression(size_t i) {
  return getRuleContext<SinkedSeaParser::ExpressionContext>(i);
}

tree::TerminalNode* SinkedSeaParser::ExpressionContext::MULT() {
  return getToken(SinkedSeaParser::MULT, 0);
}

tree::TerminalNode* SinkedSeaParser::ExpressionContext::ADD() {
  return getToken(SinkedSeaParser::ADD, 0);
}

tree::TerminalNode* SinkedSeaParser::ExpressionContext::SUB() {
  return getToken(SinkedSeaParser::SUB, 0);
}

tree::TerminalNode* SinkedSeaParser::ExpressionContext::LT() {
  return getToken(SinkedSeaParser::LT, 0);
}

tree::TerminalNode* SinkedSeaParser::ExpressionContext::EQ() {
  return getToken(SinkedSeaParser::EQ, 0);
}

tree::TerminalNode* SinkedSeaParser::ExpressionContext::AND() {
  return getToken(SinkedSeaParser::AND, 0);
}

tree::TerminalNode* SinkedSeaParser::ExpressionContext::OR() {
  return getToken(SinkedSeaParser::OR, 0);
}


size_t SinkedSeaParser::ExpressionContext::getRuleIndex() const {
  return SinkedSeaParser::RuleExpression;
}

void SinkedSeaParser::ExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SinkedSeaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpression(this);
}

void SinkedSeaParser::ExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SinkedSeaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpression(this);
}


antlrcpp::Any SinkedSeaParser::ExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SinkedSeaVisitor*>(visitor))
    return parserVisitor->visitExpression(this);
  else
    return visitor->visitChildren(this);
}


SinkedSeaParser::ExpressionContext* SinkedSeaParser::expression() {
   return expression(0);
}

SinkedSeaParser::ExpressionContext* SinkedSeaParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  SinkedSeaParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  SinkedSeaParser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, SinkedSeaParser::RuleExpression, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(73);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      setState(63);
      match(SinkedSeaParser::BOOL);
      break;
    }

    case 2: {
      setState(64);
      match(SinkedSeaParser::INT);
      break;
    }

    case 3: {
      setState(65);
      match(SinkedSeaParser::NAME);
      break;
    }

    case 4: {
      setState(66);
      match(SinkedSeaParser::NAME);
      setState(67);
      match(SinkedSeaParser::T__1);
      setState(68);
      arguments();
      setState(69);
      match(SinkedSeaParser::T__2);
      break;
    }

    case 5: {
      setState(71);
      newChan();
      break;
    }

    case 6: {
      setState(72);
      chanRead();
      break;
    }

    }
    _ctx->stop = _input->LT(-1);
    setState(95);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(93);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(75);

          if (!(precpred(_ctx, 8))) throw FailedPredicateException(this, "precpred(_ctx, 8)");
          setState(76);
          match(SinkedSeaParser::MULT);
          setState(77);
          expression(9);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(78);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(79);
          dynamic_cast<ExpressionContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == SinkedSeaParser::ADD

          || _la == SinkedSeaParser::SUB)) {
            dynamic_cast<ExpressionContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(80);
          expression(8);
          break;
        }

        case 3: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(81);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(82);
          match(SinkedSeaParser::LT);
          setState(83);
          expression(7);
          break;
        }

        case 4: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(84);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(85);
          match(SinkedSeaParser::EQ);
          setState(86);
          expression(6);
          break;
        }

        case 5: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(87);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(88);
          match(SinkedSeaParser::AND);
          setState(89);
          expression(5);
          break;
        }

        case 6: {
          _localctx = _tracker.createInstance<ExpressionContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleExpression);
          setState(90);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(91);
          match(SinkedSeaParser::OR);
          setState(92);
          expression(4);
          break;
        }

        } 
      }
      setState(97);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- NewChanContext ------------------------------------------------------------------

SinkedSeaParser::NewChanContext::NewChanContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SinkedSeaParser::NewChanContext::getRuleIndex() const {
  return SinkedSeaParser::RuleNewChan;
}

void SinkedSeaParser::NewChanContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SinkedSeaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterNewChan(this);
}

void SinkedSeaParser::NewChanContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SinkedSeaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitNewChan(this);
}


antlrcpp::Any SinkedSeaParser::NewChanContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SinkedSeaVisitor*>(visitor))
    return parserVisitor->visitNewChan(this);
  else
    return visitor->visitChildren(this);
}

SinkedSeaParser::NewChanContext* SinkedSeaParser::newChan() {
  NewChanContext *_localctx = _tracker.createInstance<NewChanContext>(_ctx, getState());
  enterRule(_localctx, 6, SinkedSeaParser::RuleNewChan);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    match(SinkedSeaParser::T__3);
    setState(99);
    match(SinkedSeaParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChanReadContext ------------------------------------------------------------------

SinkedSeaParser::ChanReadContext::ChanReadContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SinkedSeaParser::ExpressionContext* SinkedSeaParser::ChanReadContext::expression() {
  return getRuleContext<SinkedSeaParser::ExpressionContext>(0);
}


size_t SinkedSeaParser::ChanReadContext::getRuleIndex() const {
  return SinkedSeaParser::RuleChanRead;
}

void SinkedSeaParser::ChanReadContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SinkedSeaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChanRead(this);
}

void SinkedSeaParser::ChanReadContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SinkedSeaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChanRead(this);
}


antlrcpp::Any SinkedSeaParser::ChanReadContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SinkedSeaVisitor*>(visitor))
    return parserVisitor->visitChanRead(this);
  else
    return visitor->visitChildren(this);
}

SinkedSeaParser::ChanReadContext* SinkedSeaParser::chanRead() {
  ChanReadContext *_localctx = _tracker.createInstance<ChanReadContext>(_ctx, getState());
  enterRule(_localctx, 8, SinkedSeaParser::RuleChanRead);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(101);
    match(SinkedSeaParser::T__5);
    setState(102);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommandContext ------------------------------------------------------------------

SinkedSeaParser::CommandContext::CommandContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SinkedSeaParser::GlobalAssignmentContext* SinkedSeaParser::CommandContext::globalAssignment() {
  return getRuleContext<SinkedSeaParser::GlobalAssignmentContext>(0);
}

SinkedSeaParser::LocalAssignmentContext* SinkedSeaParser::CommandContext::localAssignment() {
  return getRuleContext<SinkedSeaParser::LocalAssignmentContext>(0);
}

SinkedSeaParser::AssignmentContext* SinkedSeaParser::CommandContext::assignment() {
  return getRuleContext<SinkedSeaParser::AssignmentContext>(0);
}

SinkedSeaParser::DeclarationContext* SinkedSeaParser::CommandContext::declaration() {
  return getRuleContext<SinkedSeaParser::DeclarationContext>(0);
}

SinkedSeaParser::If2Context* SinkedSeaParser::CommandContext::if2() {
  return getRuleContext<SinkedSeaParser::If2Context>(0);
}

SinkedSeaParser::If1Context* SinkedSeaParser::CommandContext::if1() {
  return getRuleContext<SinkedSeaParser::If1Context>(0);
}

SinkedSeaParser::ReturnEContext* SinkedSeaParser::CommandContext::returnE() {
  return getRuleContext<SinkedSeaParser::ReturnEContext>(0);
}

SinkedSeaParser::PrintContext* SinkedSeaParser::CommandContext::print() {
  return getRuleContext<SinkedSeaParser::PrintContext>(0);
}

SinkedSeaParser::WhileLoopContext* SinkedSeaParser::CommandContext::whileLoop() {
  return getRuleContext<SinkedSeaParser::WhileLoopContext>(0);
}

SinkedSeaParser::ThreadContext* SinkedSeaParser::CommandContext::thread() {
  return getRuleContext<SinkedSeaParser::ThreadContext>(0);
}

SinkedSeaParser::ChanAssignmentContext* SinkedSeaParser::CommandContext::chanAssignment() {
  return getRuleContext<SinkedSeaParser::ChanAssignmentContext>(0);
}

SinkedSeaParser::ExpressionContext* SinkedSeaParser::CommandContext::expression() {
  return getRuleContext<SinkedSeaParser::ExpressionContext>(0);
}


size_t SinkedSeaParser::CommandContext::getRuleIndex() const {
  return SinkedSeaParser::RuleCommand;
}

void SinkedSeaParser::CommandContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SinkedSeaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCommand(this);
}

void SinkedSeaParser::CommandContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SinkedSeaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCommand(this);
}


antlrcpp::Any SinkedSeaParser::CommandContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SinkedSeaVisitor*>(visitor))
    return parserVisitor->visitCommand(this);
  else
    return visitor->visitChildren(this);
}

SinkedSeaParser::CommandContext* SinkedSeaParser::command() {
  CommandContext *_localctx = _tracker.createInstance<CommandContext>(_ctx, getState());
  enterRule(_localctx, 10, SinkedSeaParser::RuleCommand);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(118);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(104);
      globalAssignment();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(105);
      localAssignment();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(106);
      assignment();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(107);
      declaration();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(108);
      if2();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(109);
      if1();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(110);
      returnE();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(111);
      print();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(112);
      whileLoop();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(113);
      thread();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(114);
      chanAssignment();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(115);
      expression(0);
      setState(116);
      match(SinkedSeaParser::T__6);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GlobalAssignmentContext ------------------------------------------------------------------

SinkedSeaParser::GlobalAssignmentContext::GlobalAssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SinkedSeaParser::GlobalAssignmentContext::NAME() {
  return getToken(SinkedSeaParser::NAME, 0);
}

SinkedSeaParser::ExpressionContext* SinkedSeaParser::GlobalAssignmentContext::expression() {
  return getRuleContext<SinkedSeaParser::ExpressionContext>(0);
}


size_t SinkedSeaParser::GlobalAssignmentContext::getRuleIndex() const {
  return SinkedSeaParser::RuleGlobalAssignment;
}

void SinkedSeaParser::GlobalAssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SinkedSeaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGlobalAssignment(this);
}

void SinkedSeaParser::GlobalAssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SinkedSeaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGlobalAssignment(this);
}


antlrcpp::Any SinkedSeaParser::GlobalAssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SinkedSeaVisitor*>(visitor))
    return parserVisitor->visitGlobalAssignment(this);
  else
    return visitor->visitChildren(this);
}

SinkedSeaParser::GlobalAssignmentContext* SinkedSeaParser::globalAssignment() {
  GlobalAssignmentContext *_localctx = _tracker.createInstance<GlobalAssignmentContext>(_ctx, getState());
  enterRule(_localctx, 12, SinkedSeaParser::RuleGlobalAssignment);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(120);
    match(SinkedSeaParser::T__7);
    setState(121);
    match(SinkedSeaParser::NAME);
    setState(122);
    match(SinkedSeaParser::T__8);
    setState(123);
    expression(0);
    setState(124);
    match(SinkedSeaParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LocalAssignmentContext ------------------------------------------------------------------

SinkedSeaParser::LocalAssignmentContext::LocalAssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SinkedSeaParser::LocalAssignmentContext::NAME() {
  return getToken(SinkedSeaParser::NAME, 0);
}

SinkedSeaParser::ExpressionContext* SinkedSeaParser::LocalAssignmentContext::expression() {
  return getRuleContext<SinkedSeaParser::ExpressionContext>(0);
}


size_t SinkedSeaParser::LocalAssignmentContext::getRuleIndex() const {
  return SinkedSeaParser::RuleLocalAssignment;
}

void SinkedSeaParser::LocalAssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SinkedSeaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLocalAssignment(this);
}

void SinkedSeaParser::LocalAssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SinkedSeaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLocalAssignment(this);
}


antlrcpp::Any SinkedSeaParser::LocalAssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SinkedSeaVisitor*>(visitor))
    return parserVisitor->visitLocalAssignment(this);
  else
    return visitor->visitChildren(this);
}

SinkedSeaParser::LocalAssignmentContext* SinkedSeaParser::localAssignment() {
  LocalAssignmentContext *_localctx = _tracker.createInstance<LocalAssignmentContext>(_ctx, getState());
  enterRule(_localctx, 14, SinkedSeaParser::RuleLocalAssignment);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(126);
    match(SinkedSeaParser::T__9);
    setState(127);
    match(SinkedSeaParser::NAME);
    setState(128);
    match(SinkedSeaParser::T__8);
    setState(129);
    expression(0);
    setState(130);
    match(SinkedSeaParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

SinkedSeaParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SinkedSeaParser::AssignmentContext::NAME() {
  return getToken(SinkedSeaParser::NAME, 0);
}

SinkedSeaParser::ExpressionContext* SinkedSeaParser::AssignmentContext::expression() {
  return getRuleContext<SinkedSeaParser::ExpressionContext>(0);
}


size_t SinkedSeaParser::AssignmentContext::getRuleIndex() const {
  return SinkedSeaParser::RuleAssignment;
}

void SinkedSeaParser::AssignmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SinkedSeaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignment(this);
}

void SinkedSeaParser::AssignmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<SinkedSeaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignment(this);
}


antlrcpp::Any SinkedSeaParser::AssignmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SinkedSeaVisitor*>(visitor))
    return parserVisitor->visitAssignment(this);
  else
    return visitor->visitChildren(this);
}

SinkedSeaParser::AssignmentContext* SinkedSeaParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 16, SinkedSeaParser::RuleAssignment);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(132);
    match(SinkedSeaParser::NAME);
    setState(133);
    match(SinkedSeaParser::T__8);
    setState(134);
    expression(0);
    setState(135);
    match(SinkedSeaParser::T__6);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

SinkedSeaParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SinkedSeaParser::DeclarationContext::NAME() {
  return getToken(SinkedSeaParser::NAME, 0);
}

SinkedSeaParser::ParametersContext* SinkedSeaParser::DeclarationContext::parameters() {
  return getRuleContext<SinkedSeaParser::ParametersContext>(0);
}

std::vector<SinkedSeaParser::CommandContext *> SinkedSeaParser::DeclarationContext::command() {
  return getRuleContexts<SinkedSeaParser::CommandContext>();
}
